# csa-lab4

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: cat.input  cat.lsp  double-arithmetics.input  double-arithmetics.lsp  euler-palindrome.lsp  factorial.lsp  hello-username.input  hello-username.lsp  hello.lsp  sort.input  sort.lsp  variardic.input  variardic.lsp
src/: isa.rs  lib.rs
src/golden_test_utils/: update_golden.rs
tests/: golden.rs
tests/golden/: cat.yml  double-arithmetics.yml  euler-palindrome.yml  expressions.yml  factorial.yml  hello-username.yml  hello.yml  sort.yml  variardic.yml
