[package]
name = "csa-lab4"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
walkdir = "2"
simplelog = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tempfile = "3.8"
pretty_assertions = "1.4"

[[test]]
name = "golden"
path = "tests/golden.rs"

[[bin]]
name = "update_golden"
path = "src/golden_test_utils/update_golden.rs"
